--- a/app/index.html
+++ b/app/index.html
@@ -19,12 +19,13 @@
     <link href="/app/js/plugins/jvectormap/jquery-jvectormap.css" type="text/css" rel="stylesheet" media="screen,projection">
     <link href="/app/js/plugins/chartist-js/chartist.min.css" type="text/css" rel="stylesheet" media="screen,projection">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 </head>
 
 <body class="view-login">
     <div id="root" class='container'></div>
-    <script src="http://localhost:3000/bundle.js"></script>
+    <script src="http://localhost:4000/bundle.js"></script>
 </body>
 
 </html>
