--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -8,6 +8,7 @@
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="css/custom.css"  media="screen,projection"/>
@@ -20,7 +21,7 @@
     <div id="root"></div>
      <!--JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
-    <script src="http://localhost:3000/bundle.js"></script>
+    <script src="http://localhost:4000/bundle.js"></script>
 </body>
 
 </html>
